# Fine-Tuned-SEC-Filing-Extraction-Pipeline

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  alerts.py  batch_inference.py  benchmark.py  config.yaml  dashboard.py  database.py  docker-compose.pipeline.yml  docker-compose.yml  inference_server.py  init_db.sql  monitor.py  postprocessing.py  pyproject.toml  requirements-ci.txt  requirements.txt  sample_10k.expected.json  test_integration.py  test_monitoring.py
.cursor/: CLAUDE.md
.github/workflows/: ci.yml  deploy.yml
data/: sample_10k.txt
docs/: API_CONTRACTS.md
evaluation/: __init__.py  benchmark.py  evaluate.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
monitoring/: alerts.py  dashboard.py  monitor.py
notebooks/: inference_eval.ipynb  train_qlora.ipynb
observability/: alertmanager.yml  alerts.yml  prometheus.yml  promtail-config.yaml
research/: AGENT_RESEARCH_2026-06-25.md  AGENT_RESEARCH_2026-07-01.md  AGENT_RESEARCH_2026-07-02.md
schemas/: pipeline-v1.json
scripts/: download_dataset.py  download_model.py  fetch_edgar.py  format_data.py  init_db.sql  parse_xbrl.py  sagemaker_train.py
serving/: api.py  sagemaker_deploy.py  security.py
src/: ab_router.py  circuit_breaker.py  config.py  database.py  inference.py  logging_config.py  model.py
tests/: test_ab_router.py  test_api.py  test_circuit_breaker.py  test_database.py  test_postprocessing.py
training/: callbacks.py  data_collator.py  train.py
(+10 files in other folders)
